Changes in Index and Style

--- a/index.html
+++ b/index.html
@@ -1,2 +1,21 @@
+<!DOCTYPE html>
 <html>
+   <head>
+       <title>MANIT Maniacs</title>
+       <link rel="stylesheet" href="style.css">
+   </head>
+   <body>
+       <div class="title">
+           <img class="maniacs" src="images/maniacs.png" alt="MANIT Maniacs">
+       </div>
+       <div class="menu">
+       </div>
+       <div class="slider">
+       </div>
+       <div class="aboutus">
+       </div>
+       <div class="description">
+       </div>
+       <div class="footer">
+       </div>
 </html>
