--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
    <head>
        <title>MANIT Maniacs</title>
+       <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+       <meta name="HandheldFriendly" content="true">
        <link rel="stylesheet" href="style.css">
    </head>
    <body>
