--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
            <img class="maniacs" src="images/maniacs.png" alt="MANIT Maniacs">
        </div>
        <div class="menu">
+           <ul class="topnav">
+               <li><a href="index.html">Home</a></li>
+               <li><a href="members.html">Members</a></li>
+            </ul>
        </div>
        <div class="slider">
            <script language="JavaScript">
@@ -33,7 +37,7 @@ function swapImage()
 }
 window.onload=swapImage;
 </script>
-<img height="1000" name="slide" src="images/image1.jpg" width="1000" />
+<img height="350" name="slide" src="images/image1.jpg" width="100%" />
        </div>
        <div class="aboutus">
        </div>
