--- a/index.html
+++ b/index.html
@@ -46,3 +46,9 @@ window.onload=swapImage;
        <div class="footer">
        </div>
 </html>
+
+<div id="preload">
+   <img src="images/image1.jpg" width="1" height="1" alt="Image 01" />
+   <img src="images/image2.jpg" width="1" height="1" alt="Image 02" />
+   <img src="images/image3.jpg" width="1" height="1" alt="Image 03" />
+</div>
