Added 4th image

--- a/index.html
+++ b/index.html
@@ -50,5 +50,7 @@ window.onload=swapImage;
    <img src="images/image1.jpg" width="1" height="1" alt="Image 01" />
    <img src="images/image2.jpg" width="1" height="1" alt="Image 02" />
    <img src="images/image3.jpg" width="1" height="1" alt="Image 03" />
+   <img src="images/image4.jpg" width="1" height="1" alt="Image 04" />
+
 </div>
 </html>
