--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ function swapImage()
 }
 window.onload=swapImage;
 </script>
-<img height="350" name="slide" src="images/image1.jpg" width="100%" />
+<img class="slide" height="400px" name="slide" src="images/image1.jpg" width="80%"/>
        </div>
        <div class="aboutus">
        </div>
