--- a/index.html
+++ b/index.html
@@ -40,10 +40,14 @@ window.onload=swapImage;
 <img class="slide" height="400px" name="slide" src="images/image1.jpg" width="80%"/>
        </div>
        <div class="aboutus">
+           <h1>ABOUT US</h1>
        </div>
        <div class="description">
+        <p>
+        </p>  
        </div>
        <div class="footer">
+           <h3>Developed by:Rishabh Tripathi(<a href="http://github.com/ristri">@ristri</a>) and Prerit Khandelwal(<a href="http://github.com/preritk">@preritk</a>)</h3>
        </div>
    </body>
    <div id="preload">
