changes in index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ window.onload=swapImage;
         </p>  
        </div>
        <div class="footer">
-           <h3>Developed by:Rishabh Tripathi(<a href="http://github.com/ristri">@ristri</a>) and Prerit Khandelwal(<a href="http://github.com/preritk">@preritk</a>)</h3>
+           Developed by:Rishabh Tripathi(<a href="http://github.com/ristri">@ristri</a>) and Prerit Khandelwal(<a href="http://github.com/preritk">@preritk</a>)
        </div>
    </body>
    <div id="preload">
