changes in index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     <title>MANIT Maniacs</title>
  <body>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+     <div class = "container-fluid">
+         <div class="jumbotron text-center">
+             <h1>MANIT Maniacs</h1>
+         </div>
+     </div>
  </body>
 </head>
