--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
          <div class="jumbotron text-center">
              <h1>MANIT Maniacs</h1>
          </div>
+     <div>
+     </div>
      </div>
  </body>
 </head>
