--- a/index.html
+++ b/index.html
@@ -9,21 +9,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
     <title>MANIT Maniacs</title>
-    <style type="text/css">
-.carousel{
-    background: #2f4357;
-    margin-top: 20px;
-}
-.carousel .item{
-    min-height: 280px; /* Prevent carousel from being distorted if for some reason image doesn't load */
-}
-.carousel .item img{
-    margin: 0 auto; /* Align slide image horizontally center */
-}
-.bs-example{
-	margin: 20px;
-}
-</style>
 </head>
  <body>
      <div class="container-fluid">
@@ -37,6 +22,7 @@
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
         </ol>   
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
@@ -48,6 +34,9 @@
             </div>
             <div class="item">
                 <img src="images/image3.jpg" alt="Third Slide">
+            </div>
+            <div class="item">
+                <img src="images/image4.jpg" alt="Fourth Slide">
             </div>
         </div>
         <!-- Carousel controls -->
