--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
     <title>MANIT Maniacs</title>
+    <style>
+        .centered{
+            float: none;
+            margin:0 auto;
+        }
+        </style>
 </head>
  <body>
      <div class="container-fluid">
          <div class="jumbotron text-center">
              <h1>MANIT Maniacs</h1>
          </div>
-<div class="bs-example">
+<div class="col-md-5 centered">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Carousel indicators -->
         <ol class="carousel-indicators">
