--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
             float: none;
             margin:0 auto;
         }
+        .bg{
+            background-image: url("images/mm1.png");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+        }
         </style>
 </head>
  <body>
      <div class="container-fluid">
-         <div class="jumbotron text-center">
+         <div class="jumbotron text-center bg">
              <h1>MANIT Maniacs</h1>
          </div>
 <div class="col-md-5 centered">
