--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
- 
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
-   <link rel="stylesheet" href="css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <title>MANIT Maniacs</title>
     <style>
         .centered{
@@ -20,47 +21,71 @@
             background-size: cover;
             background-position: center;
         }
-        </style>
+    </style>
 </head>
- <body>
-     <div class="container-fluid">
-         <div class="jumbotron text-center bg">
-             <h1>MANIT Maniacs</h1>
-         </div>
-<div class="col-md-5 centered">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Carousel indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-            <li data-target="#myCarousel" data-slide-to="3"></li>
-        </ol>   
-        <!-- Wrapper for carousel items -->
-        <div class="carousel-inner">
-            <div class="item active">
-                <img src="images/image1.jpg" alt="First Slide">
-            </div>
-            <div class="item">
-                <img src="images/image2.jpg" alt="Second Slide">
-            </div>
-            <div class="item">
-                <img src="images/image3.jpg" alt="Third Slide">
-            </div>
-            <div class="item">
-                <img src="images/image4.jpg" alt="Fourth Slide">
+
+<body>
+    <div class="container-fluid">
+        <div class="jumbotron text-center bg">
+            <h1>MANIT Maniacs</h1>
+        </div>
+        <div class="col-md-5 centered">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Carousel indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                    <li data-target="#myCarousel" data-slide-to="3"></li>
+                </ol>
+                <!-- Wrapper for carousel items -->
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="images/image1.jpg" alt="First Slide">
+                    </div>
+                    <div class="item">
+                        <img src="images/image2.jpg" alt="Second Slide">
+                    </div>
+                    <div class="item">
+                        <img src="images/image3.jpg" alt="Third Slide">
+                    </div>
+                    <div class="item">
+                        <img src="images/image4.jpg" alt="Fourth Slide">
+                    </div>
+                </div>
+                <!-- Carousel controls -->
+                <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                </a>
+                <a class="carousel-control right" href="#myCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                </a>
             </div>
         </div>
-        <!-- Carousel controls -->
-        <a class="carousel-control left" href="#myCarousel" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-        </a>
-        <a class="carousel-control right" href="#myCarousel" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-        </a>
-    </div>
-</div>
-     </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6 page-header text-center">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <h3>Upcoming Birthdays</h3>
+                        </div>
+                        <div class="panel-body">
+                        </div>
+                    </div>
+                </div>
+                    <div class="col-md-6 page-header text-center">
+                        <div class="panel panel-primary">
+                            <div class="panel-heading">
+                                <h3>About Us</h3>
+                            </div>
+                            <div class="panel-body well">
+                                To be filled..
+                            </div>
+                        </div>
+                    </div>
+            </div>
+        </div>
+    </div>   
+</body>
 
- </body>
 </html>
