--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app>
 
 <head>
 
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bscript.js"></script>
     <title>MANIT Maniacs</title>
@@ -21,6 +22,10 @@
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
+        }
+        td{
+            padding-left: 20%;
+            padding-right:20%;
         }
     </style>
 </head>
@@ -65,7 +70,7 @@
         </div>
         <div class="container-fluid">
             <div class="row">
-                    <div class="col-md-6 page-header text-center">
+                    <div class="col-md-8 page-header text-center">
                         <div class="panel panel-primary">
                             <div class="panel-heading">
                                 <h3>About Us</h3>
@@ -75,12 +80,24 @@
                             </div>
                         </div>
                     </div>
-                <div class="col-md-6 page-header text-center">
+                <div class="col-md-4 page-header text-center">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
                             <h3>Upcoming Birthdays</h3>
                         </div>
                         <div class="panel-body">
+                            <div class="table responsive">
+                                   <div class="bdays" ng-controller="birthdayCtrl">
+    <table class="table-striped table-bordered centered">
+    <th class="text-center">Name</th>
+    <th class="text-center">Birthday</th>
+    <tr ng-repeat="friend in friends| orderBy:'fromNow' ">
+    <td>{{friend.name}}</td>
+    <td>{{friend.birthday}}</td>
+    </tr>
+    </table>
+       </div>
+                            </div>
                         </div>
                     </div>
                 </div>
