--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
             background-position: center;
         }
         td{
-            padding-left: 20%;
-            padding-right:20%;
+            width: 25%
         }
     </style>
 </head>
@@ -83,7 +82,8 @@
                 <div class="col-md-4 page-header text-center">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            <h3>Upcoming Birthdays</h3>
+                            <img src="images/cake.png" class="img-responsive" style="display:inline"  alt="cake">
+                            Upcoming Birthdays
                         </div>
                         <div class="panel-body">
                             <div class="table responsive">
